k8s/examcreate-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: examcreate
  labels:
    name: examcreate
