k8s/examcreate-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: examcreate-frontend-deployment
  namespace: examcreate
  labels:
    app: examcreate-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: examcreate-frontend
  template:
    metadata:
      labels:
        app: examcreate-frontend
    spec:
      containers:
        - name: examcreate-frontend
          image: ghcr.io/mweiershaeuser/examcreate-frontend:1.1.1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: examcreate-frontend-service
  namespace: examcreate
spec:
  selector:
    app: examcreate-frontend
  ports:
    - port: 80
      targetPort: 80
