k8s/examcreate-statservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: examcreate-statservice-deployment
  namespace: examcreate
  labels:
    app: examcreate-statservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: examcreate-statservice
  template:
    metadata:
      labels:
        app: examcreate-statservice
    spec:
      containers:
        - name: examcreate-statservice
          image: ghcr.io/mweiershaeuser/examcreate-statservice:1.1.0
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: examcreate-statservice-service
  namespace: examcreate
spec:
  selector:
    app: examcreate-statservice
  ports:
    - port: 8000
      targetPort: 8000
