k8s/examcreate-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: examcreate-ingress
  namespace: examcreate
spec:
  ingressClassName: nginx
  rules:
    - host: examcreate.melvinweiershaeuser.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: examcreate-frontend-service
                port:
                  number: 80
